--- a/corehq/apps/app_manager/templates/app_manager/partials/build_errors.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/build_errors.html
@@ -66,9 +66,9 @@
                             case type defined.
                         {% endif %}
                         {% if error.type == "case list form not registration" %}
-                            {% url "view_module" domain app.id error.module.id as module_url%}
+                            {% url "view_module" domain app.id error.module.id as module_url %}
                             {% url "view_form" domain app.id error.module.id error.form.id as form_url %}
-                            {% blocktrans with error.module.name|trans:langs as module_name error.form.name|trans:langs as form_name%}
+                            {% blocktrans with module_name=error.module.name|trans:langs form_name=error.form.name|trans:langs %}
                             You have selected form <a href="{{ form_url }}">{{ form_name }}</a>
                             as the case registration form for the <a href="{{ module_url }}">{{ module_name }}</a> module.
                             This form is not a registration form. You needs to select a form which opens a case and
@@ -78,7 +78,7 @@
                          {% if error.type == "case list form workflow" %}
                             {% url "view_module" domain app.id error.module.id as module_url %}
                             {% url "view_form" domain app.id error.module.id error.form.id as form_url %}
-                            {% blocktrans with error.module.name|trans:langs as module_name error.form.name|trans:langs as form_name%}
+                            {% blocktrans with module_name=error.module.name|trans:langs form_name=error.form.name|trans:langs %}
                             You have selected form <a href="{{ form_url }}">{{ form_name }}</a>
                             as the case registration form for the <a href="{{ module_url }}">{{ module_name }}</a> module.
                             This form also has its end of form navigation set. These two settings are incompatible.
