show which index a doc was found in

--- a/corehq/apps/hqadmin/templates/hqadmin/doc_in_es.html
+++ b/corehq/apps/hqadmin/templates/hqadmin/doc_in_es.html
@@ -23,6 +23,7 @@
             </div>
             {% if doc_id %}
                 <h3>Doc {{ doc_id }} {{ status }}</h3>
+                <p>Found in index: {{ index }}</p>
                 <p>Doc type: {{ doc_type }}</p>
                 <div class="row-fluid">
                     <div class="span6">
