--- a/custom/ilsgateway/templates/ilsgateway/partials/report_table.html
+++ b/custom/ilsgateway/templates/ilsgateway/partials/report_table.html
@@ -23,36 +23,40 @@
 
 
 {% if thisreport.show_table %}
-<div class="row_chart module">
+<div class="{{ thisreport.css_class }} module">
     <h4 class="media-heading">{{ report_table.title }}<br/><small>{{ subtitle1 }}</small><br/><small>{{ subtitle2 }}</small></h4>
-    <ul class="stats">
-        <li>
-            <div class="report">{{ report_table.rows.total }}</div>
-            <div class="caption">{% trans 'Facilities' %}</div>
-        </li>
-        <li>
-            <div class="report">Group {{ report_table.rows.submitting_group }}: {% trans 'Submitting' %}</div>
-            <div class="caption">{% blocktrans with report_table.rows.submitting_complete as submitted and report_table.rows.submitting_total as count %}{{ submitted }} of {{ count }}{% endblocktrans %} {% trans 'submitted' %}</div>
-        </li>
-        <li>
-            <div class="report">Group {{ report_table.rows.processing_group }}: {% trans 'Processing' %}</div>
-            <div class="caption">{% blocktrans with report_table.rows.processing_complete as processed and report_table.rows.processing_total as count %}{{ processed }} of {{ count }} forms sent to MSD{% endblocktrans %}</div>
-        </li>
-        <li>
-            <div class="report">Group {{ report_table.rows.delivery_group }}: {% trans "Deliveries" %}</div>
-            <div class="caption">{% blocktrans with report_table.rows.delivery_complete as delivered and report_table.rows.delivery_total as count %}{{ delivered }} of {{ count }}{% endblocktrans %} {% trans 'delivered' %}</div>
-        </li>
-        <li>
-            <div class="report">Average Lead Time</div>
-            <div class="caption">
-                {% if report_table.rows.avg_lead_time %}
-                    {% trans "Current Average Lead Time from Report to Delivery: "%} {{ report_table.rows.avg_lead_time }} {% trans " days" %}
-                {% else %}
-                    <span class='no_data'>No Data</span>
-                {% endif %}
-            </div>
-        </li>
-    </ul>
+    {% if report_table.rows %}
+        <ul class="stats">
+            <li>
+                <div class="report">{{ report_table.rows.total }}</div>
+                <div class="caption">{% trans 'Facilities' %}</div>
+            </li>
+            <li>
+                <div class="report">Group {{ report_table.rows.submitting_group }}: {% trans 'Submitting' %}</div>
+                <div class="caption">{% blocktrans with report_table.rows.submitting_complete as submitted and report_table.rows.submitting_total as count %}{{ submitted }} of {{ count }}{% endblocktrans %} {% trans 'submitted' %}</div>
+            </li>
+            <li>
+                <div class="report">Group {{ report_table.rows.processing_group }}: {% trans 'Processing' %}</div>
+                <div class="caption">{% blocktrans with report_table.rows.processing_complete as processed and report_table.rows.processing_total as count %}{{ processed }} of {{ count }} forms sent to MSD{% endblocktrans %}</div>
+            </li>
+            <li>
+                <div class="report">Group {{ report_table.rows.delivery_group }}: {% trans "Deliveries" %}</div>
+                <div class="caption">{% blocktrans with report_table.rows.delivery_complete as delivered and report_table.rows.delivery_total as count %}{{ delivered }} of {{ count }}{% endblocktrans %} {% trans 'delivered' %}</div>
+            </li>
+            <li>
+                <div class="report">Average Lead Time</div>
+                <div class="caption">
+                    {% if report_table.rows.avg_lead_time %}
+                        {% trans "Current Average Lead Time from Report to Delivery: "%} {{ report_table.rows.avg_lead_time }} {% trans " days" %}
+                    {% else %}
+                        <span class='no_data'>No Data</span>
+                    {% endif %}
+                </div>
+            </li>
+        </ul>
+    {% else %}
+        <span>{% trans "No facilities are due to submit data in this month" %}</span>
+    {% endif %}
 </div>
 {% endif %}
 
