--- a/corehq/apps/reports_core/templates/reports_core/base_template_new.html
+++ b/corehq/apps/reports_core/templates/reports_core/base_template_new.html
@@ -45,7 +45,7 @@
                 fixColsWidth: {{ report_table.left_col.fixed.width }},
             {% endif %}
         });
-        var graphSpecs = {{ report.spec.graphs|JSON }};
+        var chartSpecs = {{ report.spec.charts|JSON }};
         $('#report-filters').submit(function(event) {
             var postData = $(this).serialize();
             $.ajax({
@@ -54,9 +54,9 @@
                 data: postData,
                 headers: {'HTTP_X_REQUESTED_WITH': 'XMLHttpRequest'},
                 success: function(data, textStatus, jqXHR) {
-                    if (graphSpecs !== null && graphSpecs.length > 0) {
+                    if (chartSpecs !== null && chartSpecs.length > 0) {
                         // draw graph
-                        charts.render(graphSpecs, data.aaData, $("#chart-container"));
+                        charts.render(chartSpecs, data.aaData, $("#chart-container"));
                     }
                 },
                 error: function(jqXHR, textStatus, errorThrown) {
