--- a/corehq/apps/userreports/templates/userreports/userreports_base.html
+++ b/corehq/apps/userreports/templates/userreports/userreports_base.html
@@ -15,6 +15,10 @@
                 <i class="icon-plus icon-blue"></i>
                 <span class="muted">{% trans "Add report" %}</span>
             </a>
+            <a href="{% url 'import_configurable_report' domain %}">
+                <i class="icon-plus icon-blue"></i>
+                <span class="muted">{% trans "Import report" %}</span>
+            </a>
         </li>
         <li class="nav-header">{% trans "Edit Data Sources" %}</li>
 {% for data_source in data_sources %}
