--- a/corehq/apps/reports/templates/reports/partials/save_reports_modal.html
+++ b/corehq/apps/reports/templates/reports/partials/save_reports_modal.html
@@ -37,10 +37,13 @@
                             </select>
                         </div>
                     </div>
-                    <div class="control-group" data-bind="visible: date_range() == 'lastn'">
+                    <div class="control-group" data-bind="visible: date_range() === 'lastn'">
                         <label class="control-label" for="days">{% trans "Number of Days" %}</label>
                         <div class="controls">
                             <input type="number" name="days" min="1" step="1" data-bind="value: days"/>
+                            <span class="help-inline">
+                                <small class="label">{% trans "Required" %}</small>
+                            </span>
                         </div>
                     </div>
                     <div class="control-group" data-bind="visible: date_range() == 'since' || date_range() == 'range'">
@@ -49,6 +52,7 @@
                             <input type="text" class="date-picker save-date-picker" name="start_date" data-bind="value: start_date"/>
                             <span class="help-inline">
                                 <small class="label">{% trans "YYYY-MM-DD" %}</small>
+                                <small class="label">{% trans "Required" %}</small>
                             </span>
                         </div>
                     </div>
@@ -58,6 +62,7 @@
                             <input type="text" id="save-end" class="date-picker save-date-picker" name="end_date" data-bind="value: end_date"/>
                             <span class="help-inline">
                                 <small class="label">{% trans "YYYY-MM-DD" %}</small>
+                                <small class="label">{% trans "Required" %}</small>
                             </span>
                         </div>
                     </div>
