--- a/corehq/apps/app_manager/templates/app_manager/module_view.html
+++ b/corehq/apps/app_manager/templates/app_manager/module_view.html
@@ -277,7 +277,15 @@
                             data-title="{% trans "Filter" %}"
                             data-content=
                             "{% blocktrans %}
-                                This XPath expression specifies which cases should appear in the case list. It can refer to any case properties and should return true if a record should be shown and false otherwise. The same functions are available as when writing Display or Validation conditions. Refer to case properties using their name (there's no need to include a &quot;/data/&quot; in front of the case property).
+                                This XPath expression specifies which cases
+                                should appear in the case list. It can refer to
+                                any case properties and should return true if a
+                                record should be shown and false otherwise. The
+                                same functions are available as when writing
+                                Display or Validation conditions. Refer to case
+                                properties using their name (there's no need to
+                                include a &quot;/data/&quot; in front of the
+                                case property).
                             {% endblocktrans %}"
                         >
 
