--- a/corehq/apps/app_manager/templates/app_manager/form_view_base.html
+++ b/corehq/apps/app_manager/templates/app_manager/form_view_base.html
@@ -283,7 +283,7 @@
                     {% trans "Case Management" %}
                 </a>
             </li>
-            {% if form.form_type == 'advanced_form' and module.has_schedule and request|toggle_enabled:"VISIT_SCHEDULER" %}
+            {% if form.form_type == 'advanced_form' and module.has_schedule %}
                  <li>
                      <a href="#visit-scheduler" data-toggle="tab">
                          {% trans "Visit Scheduler" %}
