--- a/corehq/apps/app_manager/templates/app_manager/module_view_advanced.html
+++ b/corehq/apps/app_manager/templates/app_manager/module_view_advanced.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 
 {% block settings_fields %}{{ block.super }}
-    {% if request|toggle_enabled:"VISIT_SCHEDULER" %}
+    {% if module.has_schedule or request|toggle_enabled:"VISIT_SCHEDULER" %}
     {% include "app_manager/partials/enable_schedule.html" %}
     {% endif %}
 {% endblock %}
