--- a/custom/opm/templates/opm/met_report.html
+++ b/custom/opm/templates/opm/met_report.html
@@ -19,7 +19,8 @@
                 <img id="opm-logo-inline" class="media-object"
                 src="{% static 'opm/img/logo.jpg' %}">
             </div>
-            <h1 class="media-heading">{{ report.report_title }}</h1>
+            <h1 class="media-heading">Bihar Child Support Programme (BCSP)</h1>
+            <h2 class="media-heading">{{ report.report_title }}</h2>
             <h4 class="media-heading">
                 {% for subtitle in report.report_subtitles %}
                 <br/><small>{{ subtitle }}</small>
