--- a/corehq/ex-submodules/casexml/apps/case/templates/case/partials/single_case.html
+++ b/corehq/ex-submodules/casexml/apps/case/templates/case/partials/single_case.html
@@ -10,6 +10,7 @@
     CASE_DETAILS.xform_api_url = "/a/{{ case.domain }}/api/v0.1/xform_es/";
     CASE_DETAILS.xform_ids = {{ case.xform_ids|JSON }};
     CASE_DETAILS.xform_ajax_url = "{% url 'case_form_data' case.domain case.get_id 'placeholder-form-id' %}".replace('placeholder-form-id/', '');
+    CASE_DETAILS.timezone_offset = {{ timezone_offset }};
 </script>
 
 <div id="report-content">
