Put calculation back under feature preview

--- a/corehq/apps/app_manager/templates/app_manager/module_view.html
+++ b/corehq/apps/app_manager/templates/app_manager/module_view.html
@@ -49,7 +49,8 @@
                     edit: {{ edit|JSON }},
                     saveUrl: "{% url "edit_module_detail_screens" domain app.id module.id %}",
                     parentModules: {{ parent_modules|JSON }},
-                    parentSelect: detail.parent_select
+                    parentSelect: detail.parent_select,
+                    calculationEnabled: {{ enable_calc_xpaths|BOOL }}
                 });
 
                 if (detail.sort_elements) {
