Put graphing under feature flag

--- a/corehq/apps/app_manager/templates/app_manager/module_view.html
+++ b/corehq/apps/app_manager/templates/app_manager/module_view.html
@@ -54,6 +54,7 @@
                     parentModules: {{ parent_modules|JSON }},
                     childCaseTypes: detail.child_case_types,
                     parentSelect: detail.parent_select,
+                    graphEnabled: {{ request|toggle_enabled:"GRAPH_CREATION"|BOOL }},
                     calculationEnabled: {{ enable_calc_xpaths|BOOL }}
                 });
 
