--- a/corehq/apps/custom_data_fields/templates/custom_data_fields/custom_data_fields.html
+++ b/corehq/apps/custom_data_fields/templates/custom_data_fields/custom_data_fields.html
@@ -83,7 +83,7 @@
                                           {% endblocktrans %}">
                                     </span>
                                 </th>
-                                <th>
+                                <th class="span3">
                                     {% trans "Label" %}
                                     <span class="hq-help-template"
                                           data-title="{% trans "Label" %}"
@@ -93,7 +93,6 @@
                                           {% endblocktrans %}">
                                     </span>
                                 </th>
-                                <th class="span3">{% trans "Label" %}</th>
                                 <th class="span1">{% trans "Required" %}</th>
                                 <th class="span3">{% trans "Choices" %}</th>
                                 <th class="span1">{% trans "Delete" %}</th>
