Modified CMR table layout, also improved images contrast.

--- a/custom/opm/templates/opm/met_report.html
+++ b/custom/opm/templates/opm/met_report.html
@@ -5,7 +5,10 @@
 
 {% block pretable %}
 <link rel="stylesheet" href="{% static "opm/css/report.css" %}">
-<link rel="stylesheet" href="{% static "opm/css/met_report.css" %}">
+<link rel="stylesheet" href="{% static "opm/css/met_report.css" %}" rel="stylesheet" media="all">
+
+
+
 {% if not report.needs_filters %}
     {% if rendered_as == 'print' %}
         <div id="opm-report-print">
