workaround for configurable reports css compression issues
still need to figure out what's going on here, but don't want to block
piloting on it.

http://manage.dimagi.com/default.asp?144285

--- a/corehq/apps/hqwebapp/templates/hqwebapp/base.html
+++ b/corehq/apps/hqwebapp/templates/hqwebapp/base.html
@@ -13,6 +13,7 @@
             {% block stylesheets %}
             {% endblock %}
         {% endcompress %}
+        {% block uncompressed-stylesheets %}{% endblock %}
 
         {# this should eventually be moved to the end of the page #}
         <script src="{% static 'hqstyle/js/jquery/jquery-1.7.1.min.js' %}"></script>
