less restrictive toggle check

--- a/corehq/apps/app_manager/templates/app_manager/form_view_base.html
+++ b/corehq/apps/app_manager/templates/app_manager/form_view_base.html
@@ -336,7 +336,7 @@
                 {% endif %}
             </div>
 
-            {% if form.form_type == 'advanced_form' and module.has_schedule and request|toggle_enabled:"VISIT_SCHEDULER" %}
+            {% if form.form_type == 'advanced_form' and module.has_schedule %}
                 {% include "app_manager/partials/form_tab_visit_scheduler.html" %}
             {% endif %}
             {% include "app_manager/partials/form_tab_advanced.html" %}
