--- a/corehq/apps/app_manager/templates/app_manager/partials/case_list_form_setting.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/case_list_form_setting.html
@@ -1,7 +1,7 @@
 {% load xforms_extras %}
 {% load hq_shared_tags %}
 {% load i18n %}
-{% if app.application_version == '2.0' and case_list_form_options %}
+{% if app.application_version == '2.0' %}
     <div class="control-group">
         <label class="control-label">
             {% trans "Registration Form Accessible from Case List" %}
@@ -12,17 +12,47 @@
                   can enter the registration form to create a new case.{% endblocktrans %}"
             ></span>
         </label>
-        <div id="case-list-form" class="controls">
+        <div id="case-list-form" class="controls error">
             {% if edit %}
-                 <select data-bind="
-                    optstr: case_list_form_optstr,
-                    value: case_list_form_proxy"></select>
-                <input type="hidden" name="case_list_form_id" data-bind="value: case_list_form" />
-                <span id="case_list_form-label">
-                    with label: {% input_trans module.case_list_form.label langs input_name='case_list_form_label' %}
-                </span>
+                <div data-bind="visible: caseListForm() || allowed, css: { 'alert alert-error': formMissing() || !allowed}">
+                    <select data-bind="
+                        optstr: caseListFormOptstr,
+                        value: caseListFormProxy
+                        "></select>
+                    <input type="hidden" name="case_list_form_id" data-bind="value: caseListForm" />
+                    <span id="case_list_form-label">
+                        with label: {% input_trans module.case_list_form.label langs input_name='case_list_form_label' %}
+                    </span>
+                    <div data-bind="visible: !allowed">
+                        {% trans "Error! Registration form will be ignored since this module has parent case selection configured." %}
+                    </div>
+                    <div data-bind="visible: formMissing()">
+                        {% trans "Error! The selected form does not exist." %}
+                    </div>
+                </div>
+                <div class="btn-group" data-bind="visible: !allowed && !caseListForm()">
+                    <button class="btn disabled" disabled="disabled">
+                        <span>{% trans "Don't show" %}</span>
+                    </button>
+                    <button class="btn dropdown-toggle" data-toggle="dropdown">
+                        <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="#" data-bind="click: toggleMessage">
+                                {% trans "Why can't I select a registration form?" %}
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="alert alert-info" data-bind="visible: messageVisible">
+                    <div>{% trans "Registrion forms are not supported for modules that have parent case selection configured." %}</div>
+                    <a href="#" class="btn btn-mini" data-bind="click: toggleMessage">
+                        {% trans "OK, close this" %}
+                    </a>
+                </div>
             {% else %}
-                <span data-bind="text: case_list_form_display"></span>
+                <span data-bind="text: caseListFormDisplay"></span>
                 {% if module.case_list_form.form_id %}
                     with label: {{ module.case_list_form.label|trans:langs }}
                 {% endif %}
