--- a/custom/care_pathways/templates/care_pathways/adoption_disaggregated_report.html
+++ b/custom/care_pathways/templates/care_pathways/adoption_disaggregated_report.html
@@ -15,6 +15,18 @@
 
 {% block js-inline %}
     <script type="text/javascript">
+        $(function() {
+            var filter_section = $('<section id="filters"></section>');
+            var group_section = $('<section id="groups"></section>');
+            var legend = $('fieldset legend');
+            legend.after(group_section);
+            legend.after(filter_section);
+            $( "<legend><span>Grouping</span></legend>").appendTo(group_section);
+            $( "<legend><span>Filtering</span></legend>").appendTo(filter_section);
+
+            $('fieldset fieldset').slice(0, -2).appendTo(filter_section);
+            $('fieldset fieldset').slice(-2).appendTo(group_section);
+        });
 
         {% if report_table and report_table.datatables %}
             var reportTables = new HQReportDataTables({
