--- a/custom/care_pathways/templates/care_pathways/table_card_report.html
+++ b/custom/care_pathways/templates/care_pathways/table_card_report.html
@@ -69,4 +69,18 @@
             {% endwith %}
         {% endfor %}
     {% endfor %}
+    <script type="text/javascript">
+        $(function() {
+            var filter_section = $('<section id="filters"></section>');
+            var group_section = $('<section id="groups"></section>');
+            var legend = $('fieldset legend');
+            legend.after(group_section);
+            legend.after(filter_section);
+            $( "<legend><span>Grouping</span></legend>").appendTo(group_section);
+            $( "<legend><span>Filtering</span></legend>").appendTo(filter_section);
+
+            $('fieldset fieldset').slice(0, -1).appendTo(filter_section);
+            $('fieldset fieldset').slice(-1).appendTo(group_section);
+        });
+    </script>
 {% endblock %}
