--- a/custom/ilsgateway/templates/ilsgateway/ilsconfig.html
+++ b/custom/ilsgateway/templates/ilsgateway/ilsconfig.html
@@ -54,6 +54,16 @@
         <div class="row-fluid">
             <div class="span12">
                 <div class="btn-toolbar">
+                    <button class="btn" id="clear_stock_data">
+                        {% trans "Clear stock data" %}
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <div class="row-fluid">
+            <div class="span12">
+                <div class="btn-toolbar">
                     <button class="btn" id="run_reports">
                         {% trans "Run reports generation" %}
                     </button>
@@ -88,6 +98,12 @@
         $("#sync_stock_data").click(function() {
             var url = '{% url 'sync_stock_data' domain %}';
             var successMessage = "{% trans "Sync started" %}";
+            _post(this, url, {success: successMessage});
+        });
+
+        $("#clear_stock_data").click(function() {
+            var url = '{% url 'clear_stock_data' domain %}';
+            var successMessage = "{% trans "Started" %}";
             _post(this, url, {success: successMessage});
         });
 
