--- a/corehq/apps/domain/templates/domain/create_snapshot.html
+++ b/corehq/apps/domain/templates/domain/create_snapshot.html
@@ -21,6 +21,9 @@
         {% for app, app_form in app_forms %}
         ids.push({{app.id|JSON}});
         {% endfor %}
+        {% for fixture, fixture_form in fixture_forms %}
+        ids.push({{fixture.id|JSON}});
+        {% endfor %}
 
         _.each(ids, function (id) {
             var publish = $('#id_' + id + '-publish');
@@ -107,6 +110,10 @@
         {% for app, app_form in app_forms %}
             <h3>Application: {{ app.name }}</h3>
             {% bootstrap_fieldset app_form %}
+        {% endfor %}
+        {% for fixture, fixture_form in fixture_forms %}
+            <h3>Lookup Table: {{ fixture.tag }}</h3>
+            {% bootstrap_fieldset fixture_form %}
         {% endfor %}
         <input type="hidden" name="publish_on_submit" value="yes" id="id_publish_on_submit">
     </fieldset>
