--- a/custom/ilsgateway/templates/ilsgateway/ilsconfig.html
+++ b/custom/ilsgateway/templates/ilsgateway/ilsconfig.html
@@ -9,6 +9,7 @@
 {% endblock %}
 {% block enabled_section %}
     {% if checkpoint %}
+        <h3>Checkpoint status</h3>
         <table class="table table-bordered">
             <thead>
                 <tr>
@@ -39,6 +40,52 @@
 
         </table>
     {% endif %}
+
+    {% if runner %}
+        <h3>Active report run</h3>
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>Start</th>
+                    <th>End</th>
+                    <th>Start run</th>
+                    <th>End run</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tr>
+                <td>{% if runner.start %}
+                        {{ runner.start}}
+                    {% else %}
+                        Not started yet.
+                    {% endif %}</td>
+                <td>
+                    {% if runner.end %}
+                        {{ runner.end }}
+                    {% else %}
+                        Not finished yet.
+                    {% endif %}
+                </td>
+                <td>
+                    {{ runner.start_run }}
+                </td>
+                <td>
+                    {% if runner.end_run %}
+                        {{ runner.end_run }}
+                    {% else %}
+                        Not finished yet.
+                    {% endif %}
+                </td>
+                <td>
+                    <form action="{% url 'end_report_run' domain %}" method="POST">
+
+                        <button type="submit" class="btn">Mark as finished</button>
+                    </form>
+                </td>
+            </tr>
+
+        </table>
+    {% endif %}
     {{ block.super }}
     {% if settings.source_config.enabled %}
         <div class="row-fluid">
@@ -60,16 +107,17 @@
                 </div>
             </div>
         </div>
-
-        <div class="row-fluid">
-            <div class="span12">
-                <div class="btn-toolbar">
-                    <button class="btn" id="run_reports">
-                        {% trans "Run reports generation" %}
-                    </button>
+        {% if not runner %}
+            <div class="row-fluid">
+                <div class="span12">
+                    <div class="btn-toolbar">
+                        <button class="btn" id="run_reports">
+                            {% trans "Run reports generation" %}
+                        </button>
+                    </div>
                 </div>
             </div>
-        </div>
+        {% endif %}
     {% endif %}
 {% endblock %}
 
