Add fixture UI for exchange

--- a/corehq/apps/appstore/templates/appstore/project_info.html
+++ b/corehq/apps/appstore/templates/appstore/project_info.html
@@ -264,6 +264,23 @@
             </div>
         {% endfor %}
     </div>
+    <div id="fixtures-accordion">
+        {% for fixture in fixtures %}
+            <div id="fixtures-{{ fixture.id }}">
+                <dl class="dl-horizontal">
+                    <dd>
+                        <h4 style="display: inline-block;">{{ fixture.tag }}</h4>
+                    </dd>
+                    {% if fixture.description %}
+                        <dt>{% trans 'Description' %}</dt>
+                        <dd>
+                            {{ app.description|linebreaks }}
+                        </dd>
+                    {% endif %}
+                </dl>
+            </div>
+        {% endfor %}
+    </div>
     <div>
         <form id="new-project-form" method="post" class="form-inline" action="{% url "domain_copy_snapshot" project %}">
             <fieldset>
