Add fixture description

--- a/corehq/apps/appstore/templates/appstore/project_info.html
+++ b/corehq/apps/appstore/templates/appstore/project_info.html
@@ -274,7 +274,7 @@
                     {% if fixture.description %}
                         <dt>{% trans 'Description' %}</dt>
                         <dd>
-                            {{ app.description|linebreaks }}
+                            {{ fixture.description|linebreaks }}
                         </dd>
                     {% endif %}
                 </dl>
