--- a/corehq/apps/hqwebapp/templates/hqwebapp/base.html
+++ b/corehq/apps/hqwebapp/templates/hqwebapp/base.html
@@ -121,7 +121,7 @@
                         <a href="http://www.commcarehq.org/"><img src="{% static 'hqwebapp/img/commcare-flower-footer.png' %}" class="powered-by"  alt="CommCare" /></a>
                         <a href="http://www.dimagi.com/"><img src="{% static 'hqwebapp/img/dimagi-footer.png' %}" class="powered-by"  alt="Powered by Dimagi, Inc." /></a>
                     </div>
-                    {% if user.is_authenticated %}
+                    {% if request.user.is_authenticated %}
                     <div class="btn-toolbar pull-right">
                         <a data-toggle="modal" data-target="#reportIssueModal" href="#reportIssueModal" data-backdrop="static" class="btn btn-footer-highlight"><i class="icon-comment"></i> {% trans 'Report an Issue' %}</a>
                         <a href="{% trans 'https://wiki.commcarehq.org/display/commcarepublic/Home' %}" target="_blank" class="btn btn-footer"><i class="icon-info-sign"></i> {% trans 'CommCare Help Site' %}</a>
@@ -131,7 +131,7 @@
                     <div>
                         <p style="padding-top: 7px;">
                             <a href="http://www.commcarehq.org/">CommCare HQ</a> {% trans 'is copyright' %} &copy; {% now "Y" %} <a href="http://www.dimagi.com/">Dimagi, Inc.</a>
-                            {% if user.is_authenticated %}
+                            {% if request.user.is_authenticated %}
                                 &nbsp;|&nbsp;
                                 <a href="{% trans 'http://www.commcarehq.org/home' %}">{% trans 'Learn more about CommCare HQ' %}</a>.
                             {% endif %}
@@ -147,7 +147,7 @@
             </div>
         </footer>
         <div id="hq-modal-home">
-            {% if user.is_authenticated %}
+            {% if request.user.is_authenticated %}
             <div class="modal hide fade" id="reportIssueModal">
                 <div class="modal-header">
                     <a class="close" data-dismiss="modal">&times;</a>
