--- a/corehq/apps/app_manager/templates/app_manager/module_view.html
+++ b/corehq/apps/app_manager/templates/app_manager/module_view.html
@@ -303,8 +303,12 @@
                 </div>
                 <div id="{{ detail.type }}-detail-screen-sort">
                 {% if app.enable_multi_sort %}
+                    <a href="#" data-bind="visible: !showing(), click: function(data){data.addButtonClicked(true);}">
+                        <i class="icon-plus"></i>
+                        Add a sort property...
+                    </a>
                     <div class="ui-sortable">
-                        <table class="table table-condensed detail-screen-table" data-bind="if: sortRows().concat(templateRow).length">
+                        <table class="table table-condensed detail-screen-table" data-bind="if: showing">
                             <thead>
                                 <tr>
                                     <th></th>
