--- a/corehq/apps/locations/templates/locations/manage/location.html
+++ b/corehq/apps/locations/templates/locations/manage/location.html
@@ -2,6 +2,7 @@
 {% load i18n %}
 {% load hq_shared_tags %}
 {% load hqstyle_tags %}
+{% load crispy_forms_tags %}
 
 {% block js %}{{ block.super }}
     <script src="{% static 'users/js/key_filters.js' %}"></script>
@@ -71,6 +72,8 @@
   <form id="loc_form" class="form form-horizontal" name="product" method="post">
     {% bootstrap_form_errors form %}
     {% bootstrap_fieldset form "Location Information" %}
+
+    {% crispy form.custom_data.form %}
 
     {% if form.sub_forms %}<hr />{% endif %}
     {% for loc_type, subform in form.sub_forms.items %}
