--- a/custom/ilsgateway/templates/ilsgateway/partials/report_table.html
+++ b/custom/ilsgateway/templates/ilsgateway/partials/report_table.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 <div class="{{ thisreport.css_class }} module">
-    <h4 class="media-heading">{{ report_table.title }}<br/><small>{{ subtitle1 }}</small><br/><small>{{ subtitle2 }}</small></h4>
+    <h4 class="media-heading">{{ report_table.title }}<br/></h4>
     {% if report_table.rows %}
         <ul class="stats">
             <li>
