--- a/corehq/apps/reports/templates/reports/reportdata/excel_export_data.html
+++ b/corehq/apps/reports/templates/reports/reportdata/excel_export_data.html
@@ -183,6 +183,7 @@
             <th>{% trans "Form" %}</th>
             <th>{% trans "Custom Export" %}</th>
             <th>{% trans "Download" %}</th>
+            <th>{% trans "Download Multimedia" %}</th>
             <th>{% trans "Total Submissions" %}</th>
             <th>
                 {% trans "Add to Bulk Export" %} <i class="bulk-export-info icon-white icon-info-sign"></i>
@@ -295,6 +296,15 @@
                            class="btn btn-primary dl-export" ><i class="icon-download-alt icon-white"></i> {% trans "Download" %}</a>
                     {% else %}
                         {% trans "No Forms" %}
+                    {% endif %}
+                </td>
+                <td class="cell-vertical-centered">
+                    {% if form.media > 0 and form.app.id %}
+                        <a href="{% url "form_multimedia_export" domain form.app.id %}?xmlns={{form.xmlns}}"
+                           class="btn btn-primary dl-export" ><i
+                           class="icon-download-alt icon-white"></i> {% trans "Download " %} ({{form.size}})</a>
+                    {% else %}
+                        <span class="label">{% trans "No Multimedia" %}</span>
                     {% endif %}
                 </td>
                 <td>
