--- a/corehq/apps/reports/templates/reports/reportdata/excel_export_data.html
+++ b/corehq/apps/reports/templates/reports/reportdata/excel_export_data.html
@@ -300,7 +300,7 @@
                 </td>
                 <td class="cell-vertical-centered">
                     {% if form.media > 0 and form.app.id %}
-                        <a href="{% url "form_multimedia_export" domain form.app.id %}?xmlns={{form.xmlns}}"
+                        <a href="{% url "form_multimedia_export" domain form.app.id %}?xmlns={{form.xmlns}}&{{ get_filter_params.urlencode|safe }}"
                            class="btn btn-primary dl-export" ><i
                            class="icon-download-alt icon-white"></i> {% trans "Download " %} ({{form.size}})</a>
                     {% else %}
