--- a/corehq/apps/hqwebapp/templates/hqwebapp/base.html
+++ b/corehq/apps/hqwebapp/templates/hqwebapp/base.html
@@ -16,14 +16,18 @@
         {% block uncompressed-stylesheets %}{% endblock %}
 
         {# this should eventually be moved to the end of the page #}
+        {% if formdesigner %}
         <script src="{% static 'hqstyle/js/jquery/jquery-1.11.1.min.js' %}"></script>
         <script src="{% static 'hqstyle/js/jquery/jquery-migrate-1.2.1.min.js' %}"></script>
+        {% else %}
+        <script src="{% static 'hqstyle/js/jquery/jquery-1.7.1.min.js' %}"></script>
+        {% endif %}
         <script type="text/javascript" src="{% static 'hqwebapp/js/lib/knockout-2.3.0.js' %}"></script>
         <script type="text/javascript" src="{% static 'hqwebapp/js/lib/underscore-1.4.4.js' %}"></script>
         <script type="text/javascript" src="{% static 'hqwebapp/ko/global.handlers.js' %}"></script>
 
         {% block oldstyle_imports %}
-            <link rel="stylesheet" href="{% static 'hqwebapp/js/lib/jquery-ui/jquery-ui-redmond-1.11.2.css' %}"/>
+            <link rel="stylesheet" href="{% static 'hqwebapp/js/lib/jquery-ui/jquery-ui-redmond-1.8.16.css' %}"/>
             {% compress css %}
             <link type="text/less" rel="stylesheet" media="all" href="{% static 'style/less/legacy/core.less' %}"/>
             {% endcompress %}
