--- a/corehq/apps/hqwebapp/templates/imports/hq-oldstyle-js.html
+++ b/corehq/apps/hqwebapp/templates/imports/hq-oldstyle-js.html
@@ -1,5 +1,9 @@
 {% load hq_shared_tags %}
+{% if formdesigner %}
 <script src="{% static 'hqwebapp/js/lib/jquery-ui/jquery-ui-1.11.2.min.js' %}"></script>
+{% else %}
+<script src="{% static 'hqwebapp/js/lib/jquery-ui/jquery-ui-1.8.16.min.js' %}"></script>
+{% endif %}
 <script src="{% static 'hqwebapp/js/main.js' %}"></script>
 
 <script type="text/javascript">
